--- a/system-frontend/src/index.css
+++ b/system-frontend/src/index.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 * {
     box-sizing: border-box;
 }
@@ -12,7 +12,7 @@ h1, h2, h3, h4, h5, h6, p {
 }
 
 body {
-    font-family: 'Open Sans', sans-serif;
+    font-family: "Poppins",'Open Sans', sans-serif;
     margin: 0;
     padding: 0;
     font-size: 14px;
@@ -33,7 +33,7 @@ input {
 }
 
 input:focus {
-    border-color: #5b08a7;
+    border-color: #145388;
 }
 
 .btn,
@@ -42,7 +42,7 @@ input:focus {
 .btn-delete {
     font-family: "Roboto", sans-serif;
     outline: 0;
-    background: #5b08a7;
+    background: #145388;
     border: 0;
     text-decoration: none;
     padding: 15px;
@@ -79,13 +79,14 @@ input:focus {
     border-radius: 6px;
 }
 .btn-logout:hover {
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: #145388;
+    color: white;
 }
 
 .btn:hover,
 .btn:active,
 .btn:focus {
-    background: #5b08a7;
+    background:  #145388;
 }
 
 .text-center {
@@ -171,7 +172,7 @@ table > tbody > tr > td {
 }
 
 .login-signup-form .form .message a {
-    color: #5b08a7;
+    color:  #145388;
     text-decoration: none;
 }
 
@@ -183,22 +184,24 @@ table > tbody > tr > td {
 }
 
 #defaultLayout aside {
-    width: 240px;
-    background-color: #5b08a7;
-    padding: 1rem
+    width: 200px;
+    background-color: white;
+    padding: 1rem;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
 }
 
 #defaultLayout aside > a {
     display: block;
     padding: 0.75rem 1rem;
     border-radius: 6px;
-    color: white;
+    color: black;
     text-decoration: none;
     transition: all 0.2s;
 }
 
 #defaultLayout aside > a:hover {
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: #145388;
+    color: white;
 }
 
 #defaultLayout .content {
@@ -216,7 +219,7 @@ table > tbody > tr > td {
 }
 
 #defaultLayout main {
-    padding: 2rem;
+    padding: 1rem;
 }
 
 .animated {
