--- a/system-frontend/src/views/Dashboard.css
+++ b/system-frontend/src/views/Dashboard.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -12,12 +11,12 @@
 
 .container{
     margin: 10px 10px 10px 0;
-    background-color: dee2e6; 
+    background-color: white; 
     width: 15rem;  
     height: 18rem;
     padding: 1rem;
     border-radius: 5%;
-    box-shadow: 0 5px 10px rgb(163, 162, 162);
+    box-shadow: 0 1px 3px rgb(163, 162, 162);
 }
 .image-holder{
     display: block;
