--- a/system-frontend/src/views/Dashboard.css
+++ b/system-frontend/src/views/Dashboard.css
@@ -34,3 +34,12 @@
     height: 2rem;
     padding-bottom: 3px;
 }
+.vote{
+    display: flex;
+    justify-content: space-between;
+}
+.vote,.description, .date{
+    padding-top: 5px;
+    padding-left: 5px;
+    padding-right: 5px;
+}
