--- a/system-frontend/src/index.css
+++ b/system-frontend/src/index.css
@@ -83,10 +83,18 @@ input:focus {
     color: white;
 }
 
-.btn:hover,
+/* .btn:hover,
+.btn:focus,
 .btn:active,
-.btn:focus {
+.btn.active {
     background:  #145388;
+    color: white;
+} */
+
+.active{
+    background:  #145388;
+    color: white !important;
+    box-shadow: 3px 3px 2px #285070;
 }
 
 .text-center {
@@ -193,15 +201,19 @@ table > tbody > tr > td {
 #defaultLayout aside > a {
     display: block;
     padding: 0.75rem 1rem;
-    border-radius: 6px;
+    border-radius: 15px;
     color: black;
     text-decoration: none;
     transition: all 0.2s;
+    margin-bottom: 10px;
+
 }
 
 #defaultLayout aside > a:hover {
     background-color: #145388;
     color: white;
+    box-sizing: border-box;
+    box-shadow: 5px 5px 2px #325673;
 }
 
 #defaultLayout .content {
@@ -220,6 +232,10 @@ table > tbody > tr > td {
 
 #defaultLayout main {
     padding: 1rem;
+}
+
+.icon {
+    margin-right: 15px;
 }
 
 .animated {
@@ -262,6 +278,8 @@ table > tbody > tr > td {
     font-weight: 900;
     color:  #145388;
 }
+
+
 @keyframes fadeInDown {
     0% {
         opacity: 0;
