--- a/system-frontend/src/index.css
+++ b/system-frontend/src/index.css
@@ -193,6 +193,7 @@ table > tbody > tr > td {
 
 #defaultLayout aside {
     width: 200px;
+    min-width: 200px;
     background-color: white;
     padding: 1rem;
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
