--- a/system-frontend/src/views/Profile.css
+++ b/system-frontend/src/views/Profile.css
@@ -20,7 +20,6 @@
   .profile-image {
     width: 150px;
     height: 150px;
-    border-radius: 50%;
   }
   
   .links-container {
@@ -51,4 +50,32 @@
   .right-panel form input[type="text"] {
     width: 100%;
   }
+  .image-label {
+    display: inline-block;
+    position: relative;
+    vertical-align: middle; /* Adjust vertical alignment */
+  }
   
+  .image-label::before {
+    content: "";
+    display: block;
+    background-image: url('');
+  }
+  
+  .image-label .fa-camera {
+    position: relative;
+    top: 0; /* Adjust vertical alignment */
+  }
+  
+  .profile-image-holder {
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+  }
+  .camera-icon{
+    padding-left: 5px;
+  }
