--- a/system-frontend/src/views/Profile.css
+++ b/system-frontend/src/views/Profile.css
@@ -2,13 +2,13 @@
 .panel {
     width: auto;
     display: flex;
-    max-width: 800px;
+    max-width: 700px;
   }
   
 .left-panel {
-    flex: 1;
-    padding: 20px;
-
+  flex: 0.5;
+  padding: 30px;
+  width: fit-content;
   }
   
   .image-container {
@@ -53,7 +53,7 @@
   .image-label {
     display: inline-block;
     position: relative;
-    vertical-align: middle; /* Adjust vertical alignment */
+    vertical-align: middle;
   }
   
   .image-label::before {
@@ -64,7 +64,7 @@
   
   .image-label .fa-camera {
     position: relative;
-    top: 0; /* Adjust vertical alignment */
+    top: 0; 
   }
   
   .profile-image-holder {
@@ -72,10 +72,21 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
     cursor: pointer;
+    width: 40%;
+    height: 0;
   }
   .camera-icon{
-    padding-left: 5px;
+    padding-right: 5px;
+  }
+  .update{
+    margin-top: 10px;
+  }
+  .right-panel label{
+    margin-top: 0;
+  }
+  .left-panel label{
+    cursor: pointer;
+    margin-top: 0;
+    margin: 6px;
   }
