--- a/system-frontend/src/views/Reports.css
+++ b/system-frontend/src/views/Reports.css
@@ -12,7 +12,7 @@
     margin: 15px 30px 10px 0;
     background-color: white; 
     width: 23rem;  
-    height: 36rem;
+    height: 30rem;
     padding: 1rem 1rem 0;
     border-radius: 5%;
     box-shadow: 0 1px 3px rgb(163, 162, 162);
@@ -83,7 +83,7 @@
 }
 .description{
     font-size: 12px;
-    max-height: 7rem;
+    height: 3.5rem;
     overflow: hidden;
     text-align: justify;  
 }
@@ -94,10 +94,11 @@ img{
 
 .btn-filter {
     text-decoration: none;
-    padding: 0.75rem 1rem;
+    padding: 0.1rem 0.3rem;
     color: #212121;
     transition: all 0.3s;
     border-radius: 6px;
+    margin: 6px;
 }
 .btn-filter:hover {
     background-color: #145388;
